# spawn-airflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: example_dag.py
spawn_airflow/: __init__.py  bootstrap.py  completion.py  launch.py  operator.py  sizing.py  taskspec.py  trigger.py
tests/: test_drift_guard.py  test_helpers.py  test_operator.py  test_taskspec.py
