[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spawn-airflow"
version = "0.1.0"
description = "Apache Airflow operator that runs a task on an ephemeral EC2 instance via spore-host/spawn"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "scttfrdmn" }]
keywords = ["airflow", "aws", "ec2", "spawn", "operator", "workflow", "ephemeral"]
dependencies = [
    # Operator/Trigger/defer + conf are stable public API across the 2->3
    # transition; only the Executor interface churned (which we deliberately
    # don't touch). Import BaseOperator from airflow.sdk (3.x) with a 2.x fallback.
    "apache-airflow>=2.9,<4",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23", "ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage = "https://github.com/spore-host/spawn-airflow"
Issues = "https://github.com/spore-host/spore-host/issues"

# Airflow discovers operators/triggers by IMPORT PATH, not entry points, and we
# expose no custom connection type — so this is a plain package, NOT an
# apache-airflow-providers-* provider. No [project.entry-points] needed.

[tool.setuptools.packages.find]
include = ["spawn_airflow*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
